pls_core/src/inflections/snapshots/pls_core__inflections__tests__inflection_tests__conjugation_1_en.snap
---
source: pls_core/src/inflections/mod.rs
expression: html

---
<div class="pls-inflection-root">
  <header class="pls-inflection-header">
    <summary>
      <div class="pls-inflection-summary-word-info">^ābādheti$ &ndash; "eti pr" (like ^bhāveti$)</div>
      <div class="pls-inflection-summary-definition">
        <span class="pls-inflection-summary-definition-pos">(pr)</span> <span class="pls-inflection-summary-definition-meaning">oppresses, harasses</span>
      </div>
    </summary>
  </header>
<table class="pls-inflection-table pls-inflection-type-conjugation">
    <thead>
      <tr>
        <td><span class="pls-inflection-table-title">pr</span></td>
        <td colspan="2"><span class="pls-inflection-col-header">act</span></td>
        </tr>
      <tr>
        <td><span class="pls-inflection-row-header"></span></td>
        <td><span class="pls-inflection-col-header">sg</span></td>
        <td><span class="pls-inflection-col-header">pl</span></td>
        </tr>
    </thead>
    <tbody>
      <tr>
        <td><span class="pls-inflection-row-header">pr 3rd</span></td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādheti$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhenti$</div>
          </td>
        </tr>
      <tr>
        <td><span class="pls-inflection-row-header">pr 2nd</span></td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhesi$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhetha$</div>
          </td>
        </tr>
      <tr>
        <td><span class="pls-inflection-row-header">pr 1st</span></td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhemi$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhema$</div>
          </td>
        </tr>
    </tbody>
  </table>

<table class="pls-inflection-table pls-inflection-type-conjugation">
    <thead>
      <tr>
        <td><span class="pls-inflection-table-title">imp</span></td>
        <td colspan="2"><span class="pls-inflection-col-header">act</span></td>
        <td colspan="2"><span class="pls-inflection-col-header">reflx</span></td>
        </tr>
      <tr>
        <td><span class="pls-inflection-row-header"></span></td>
        <td><span class="pls-inflection-col-header">sg</span></td>
        <td><span class="pls-inflection-col-header">pl</span></td>
        <td><span class="pls-inflection-col-header">sg</span></td>
        <td><span class="pls-inflection-col-header">pl</span></td>
        </tr>
    </thead>
    <tbody>
      <tr>
        <td><span class="pls-inflection-row-header">imp 3rd</span></td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhetu$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhentu$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhetaṃ$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhentaṃ$</div>
          </td>
        </tr>
      <tr>
        <td><span class="pls-inflection-row-header">imp 2nd</span></td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhehi$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhetha$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhessu$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhevho$</div>
          </td>
        </tr>
      <tr>
        <td><span class="pls-inflection-row-header">imp 1st</span></td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhemi$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhema$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhe$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhemase$</div>
          </td>
        </tr>
    </tbody>
  </table>

<table class="pls-inflection-table pls-inflection-type-conjugation">
    <thead>
      <tr>
        <td><span class="pls-inflection-table-title">opt</span></td>
        <td colspan="2"><span class="pls-inflection-col-header">act</span></td>
        <td colspan="2"><span class="pls-inflection-col-header">reflx</span></td>
        </tr>
      <tr>
        <td><span class="pls-inflection-row-header"></span></td>
        <td><span class="pls-inflection-col-header">sg</span></td>
        <td><span class="pls-inflection-col-header">pl</span></td>
        <td><span class="pls-inflection-col-header">sg</span></td>
        <td><span class="pls-inflection-col-header">pl</span></td>
        </tr>
    </thead>
    <tbody>
      <tr>
        <td><span class="pls-inflection-row-header">opt 3rd</span></td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādheyya$</div>
          <div class="pls-inflection-inflected-word">^ābādhe$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādheyyuṃ$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhetha$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādheraṃ$</div>
          </td>
        </tr>
      <tr>
        <td><span class="pls-inflection-row-header">opt 2nd</span></td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādheyyāsi$</div>
          <div class="pls-inflection-inflected-word">^ābādhe$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhetha$</div>
          <div class="pls-inflection-inflected-word">^ābādheyyātha$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhetho$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādheyyavho$</div>
          <div class="pls-inflection-inflected-word">^ābādheyyāvho$</div>
          </td>
        </tr>
      <tr>
        <td><span class="pls-inflection-row-header">opt 1st</span></td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādheyyaṃ$</div>
          <div class="pls-inflection-inflected-word">^ābādheyyāmi$</div>
          <div class="pls-inflection-inflected-word">^ābādhe$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhema$</div>
          <div class="pls-inflection-inflected-word">^ābādhemu$</div>
          <div class="pls-inflection-inflected-word">^ābādheyyāma$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādheyyaṃ$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādheyyāmhe$</div>
          </td>
        </tr>
    </tbody>
  </table>

<table class="pls-inflection-table pls-inflection-type-conjugation">
    <thead>
      <tr>
        <td><span class="pls-inflection-table-title">fut</span></td>
        <td colspan="2"><span class="pls-inflection-col-header">act</span></td>
        <td colspan="2"><span class="pls-inflection-col-header">reflx</span></td>
        </tr>
      <tr>
        <td><span class="pls-inflection-row-header"></span></td>
        <td><span class="pls-inflection-col-header">sg</span></td>
        <td><span class="pls-inflection-col-header">pl</span></td>
        <td><span class="pls-inflection-col-header">sg</span></td>
        <td><span class="pls-inflection-col-header">pl</span></td>
        </tr>
    </thead>
    <tbody>
      <tr>
        <td><span class="pls-inflection-row-header">fut 3rd</span></td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhessati$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhessanti$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhessate$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhessante$</div>
          </td>
        </tr>
      <tr>
        <td><span class="pls-inflection-row-header">fut 2nd</span></td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhessasi$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhessatha$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhessase$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhessavhe$</div>
          </td>
        </tr>
      <tr>
        <td><span class="pls-inflection-row-header">fut 1st</span></td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhessāmi$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhessāma$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhessaṃ$</div>
          </td>
        <td>
          <div class="pls-inflection-inflected-word">^ābādhessāmhe$</div>
          </td>
        </tr>
    </tbody>
  </table>


  <footer class="pls-inflection-footer">
    <a class="pls-inflection-feedback-link" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeJpx7TsISkYEXzxvbBtOH25T-ZO1Z5NFdujO5SD9qcAH_i1A/viewform?entry.267696921=test case&entry.1433863141=v0.1">
      spot a mistake? something missing? fix it here!
    </a>
  </footer>
</div>

